# mechvibes-dx

./: .gitignore  ARCHITECTURE.md  AppImageBuilder.yml  CONFIG_FORMAT.jsonc  CONFIG_FORMAT.txt  Cargo.toml  Dioxus.toml  IOHOOK_KEYCODE_MAPPING.md  LICENSE  MILESTONE_2025-05-24.txt  README.md  REMOVED_AUDIO_MODULES.txt  analyze_keycodes.rs  app.config.json  build.rs  cross-platform-build.ps1  debug_audio_duration.rs  keycode_comparison.rs  mechvibes-dx.desktop  pnpm-lock.yaml  style.css  tailwind.config.js  test_conversion.rs  test_converter.rs  test_converter_direct.rs  test_mouse.rs  test_sound.ps1  test_soundpack_validation.rs  test_timing.rs  timing-converter.ps1
.augment/: keyboard-event-capture-issue-analysis.md
assets/: app.manifest  main.css  style.css  tailwind.css
assets/favicon/: site.webmanifest
data/: ambiance.json  config.json  music.json  soundpacks.json
debian/: postinst  postrm
docs/: LINUX_WAYLAND_SETUP.md
icons/: 256x256.icns  favicon.icns
installer/: README.md
installer/windows/: mechvibes-dx-setup.iss
scripts/: build-linux-installer.sh  build-windows-installer.bat  build-windows-installer.ps1
soundpacks/Koala/: config.json  config_converted.json  config_v1_backup.json
soundpacks/Test Soundpack/: config.json
soundpacks/cherrymx-black-pbt/: config.json
soundpacks/imported_0e582a1c-7654-48ff-8f5b-bfa4a74a4536/: config.json
soundpacks/keyboard/cherrymx-black-abs/: config.json
soundpacks/keyboard/cherrymx-black-pbt/: config.json
soundpacks/keyboard/cherrymx-blue-abs/: config.json
soundpacks/keyboard/cherrymx-blue-pbt/: config.json
soundpacks/keyboard/cherrymx-brown-abs/: config.json
soundpacks/keyboard/cherrymx-brown-pbt/: config.json
soundpacks/keyboard/cherrymx-red-abs/: config.json
soundpacks/keyboard/cherrymx-red-pbt/: config.json
soundpacks/keyboard/eg-crystal-purple/: config.json
soundpacks/keyboard/eg-oreo/: config.json
soundpacks/keyboard/nk-cream/: config.json
soundpacks/keyboard/topre-purple-hybrid-pbt/: config.json
soundpacks/mouse-simple/: config.json
soundpacks/oreo/: config.json  icon.avif
soundpacks/sound-pack-1200000000002/: config.json  config.json.v1.backup
soundpacks/sound-pack-1200000000006/: config.json  config.json.v1.backup
soundpacks/test/: config.json
soundpacks/test-missing-icon/: config.json
soundpacks/test-mouse/: config.json
soundpacks/test-refresh/: config.json
soundpacks/test-soundpack/: config.json
soundpacks/test-soundpack-2024/: config.json
soundpacks/test-v1/: config.json
soundpacks/testv1soundpack/test_v1_soundpack/: config.json
sounds/: config.json
sounds/cherrymx-black-pbt/: config.json
sounds/oreo/: config.json
src/: config_converter.rs  main.rs
src/components/: app_info.rs  cache_manager.rs  device_selector.rs  device_selector_new.rs  dock.rs  header.rs  keyboard_soundpack_selector.rs  logo.rs  mod.rs  mouse_soundpack_selector.rs  mouse_volume_slider.rs  soundpack_selector.rs  test_sound_button.rs  theme_toggler.rs  titlebar.rs  volume_slider.rs  window_controller.rs
src/components/pages/: customize.rs  effects.rs  home.rs  mod.rs  mood.rs  settings.rs  soundpacks.rs  soundpacks_new.rs  themes.rs
src/components/ui/: collapse.rs  confirm_delete_modal.rs  mod.rs  page_header.rs  progress_step.rs  soundpack_import_modal.rs  soundpack_manager.rs  soundpack_table.rs  soundpack_upload_modal.rs  toggler.rs
src/libs/: audio.rs  device_manager.rs  evdev_input_listener.rs  focused_input_listener.rs  input_device_manager.rs  input_listener.rs  input_manager.rs  keyboard.rs  mod.rs  mouse.rs  protocol.rs  routes.rs  theme.rs  tray.rs  ui.rs
src/libs/audio/: audio_context.rs  compressed_audio.rs  mod.rs  music_player.rs  sound_manager.rs  soundpack_loader.rs  soundpack_loader_fixed.rs
src/state/: ambiance.rs  app.rs  config.rs  config_utils.rs  manifest.rs  mod.rs  music.rs  optimized_soundpack_cache.rs  paths.rs  soundpack.rs  soundpack_cache.rs  theme_utils.rs  themes.rs
src/utils/: auto_startup.rs  auto_updater.rs  config.rs  config_converter.rs  constants.rs  data.rs  delay.rs  file_utils.rs  logger.rs  mod.rs  path.rs  path_utils.rs  soundpack.rs  soundpack_installer.rs  soundpack_timing_fixer.rs  soundpack_validator.rs  theme.rs  theme_utils.rs  update_service.rs  upload_handler.rs
test_v1_soundpack/: config.json
utils/: batch-convert-timing.ps1  convert-timing.ps1
