[package]
name = "mechvibes-dx"
version = "0.1.0"
authors = ["Hải Nguyễn <hainguyen.ts13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dioxus = { version = "0.6.1", features = ["router"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11.6"
futures-timer = "3.0.3"
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }
notify-rust = "4.11.3"
once_cell = "1.21.3"
open = "5.3.0"
rand = "0.9.0"
rdev = "0.5.3"
rfd = "0.15"
rodio = "0.20.1"
hound = "3.5"
image = "0.24"
serde = "1.0.218"
serde_json = "1.0.140"
strum = { version = "0.26", features = ["derive"] }
tray-icon = "0.14"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
zip = "2.2.0"


[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = ["dioxus/desktop"]
desktop = ["dioxus/desktop"]

[package.metadata.bundle]
name = "MechvibesDX"
identifier = "com.hainguyents13.mechvibesdx"
version = "0.1.0"
category = "Productivity"
short_description = "MechvibesDX"
long_description = ""

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
