[package]
name = "mechvibes-dx"
version = "0.4.1"
authors = ["Hải Nguyễn <hainguyen.ts13@gmail.com>"]
edition = "2024"
description = "A modern mechanical keyboard sound simulator with customizable soundpacks"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dioxus = { version = "0.7.2", features = ["router"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11.6"
futures-timer = "3.0.3"
lucide-dioxus = { version = "2.45.0", features = ["all-icons"] }
once_cell = "1.21.3"
open = "5.3.0"
rand = "0.9.0"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
# Use rfd from dioxus-desktop (0.15.4) with tokio instead of async-std
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
rodio = "0.20.1"
cpal = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = [
  "mp3",
  "wav",
  "ogg",
  "isomp4",
  "aac",
] }
image = "0.24"
serde = "1.0.218"
serde_json = "1.0.140"
strum = { version = "0.26", features = ["derive"] }
tray-icon = "0.14"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
zip = "2.2.0"
device_query = "4.0.1"
directories = "6.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = [
  "wincon",
  "winuser",
  "hidusage",
  "hidpi",
  "setupapi",
  "devguid",
  "cfgmgr32",
  "winreg",
] }


[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = ["dioxus/desktop", "auto-update"]
desktop = ["dioxus/desktop"]
auto-update = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# DEB package configuration for Ubuntu/Debian
[package.metadata.deb]
maintainer = "Hải Nguyễn <hainguyen.ts13@gmail.com>"
copyright = "2025, Hải Nguyễn <hainguyen.ts13@gmail.com>"
extended-description = """\
A modern mechanical keyboard sound simulator for Linux.
Plays realistic keyboard sounds as you type with customizable soundpacks."""
depends = "$auto, libasound2, libevdev2, libxdo3"
section = "sound"
priority = "optional"
assets = [
  ["target/release/mechvibes-dx", "usr/bin/", "755"],
  ["assets/icon.png", "usr/share/icons/hicolor/512x512/apps/mechvibes-dx.png", "644"],
  ["mechvibes-dx.desktop", "usr/share/applications/", "644"],
  ["README.md", "usr/share/doc/mechvibes-dx/", "644"],
  ["soundpacks/**/*", "usr/share/mechvibes-dx/soundpacks/", "644"],
]
maintainer-scripts = "debian/"
